cmake_minimum_required(VERSION 3.0)
project(particle_cmake_cross_compile)
set(CMAKE_CXX_STANDARD 11)

if (NOT EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    message(FATAL_ERROR "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
endif ()

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(NO_OUTPUT_DIRS)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CONAN_CMAKE_MODULE_PATH} ${CMAKE_MODULE_PATH})

find_package(Particle)
include(flasher)

include(TinyGpsPlus)
include(DS18B20)
include(LiquidCrystalI2C)
include(NeoGPS)
include(AssetTrackerRK)

include(empty/CMakeLists.txt)
add_particle_remote_app(tinker)
add_particle_remote_app(blinker)
add_particle_remote_app(knocker)
add_particle_remote_app(tracker TinyGpsPlus)
add_particle_remote_app(tracker2 NeoGPS)
add_particle_remote_app(display LiquidCrystalI2C)
add_particle_remote_app(thermometer OneWire DS18B20)
add_particle_remote_app(asset-tracker-rk LIS3DH AssetTrackerRK)

if (PLATFORM STREQUAL electron)
    message("Enabling electron specific builds")
    add_particle_remote_app(btserial LIS3DH AssetTrackerRK)
endif ()
